2024-11-13  Robby Stephenson  <robby@periapsis.org>

	* Added option to disable the welcome screen.

2024-10-24  Robby Stephenson  <robby@periapsis.org>

	* Improved image loading to be only on need.

2024-10-21  Robby Stephenson  <robby@periapsis.org>

	* Added property to disable line feed replacement in Paragraph fields.

2024-09-30  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 4.0.1.

2024-09-20  Robby Stephenson  <robby@periapsis.org>

	* Fixed encoding for HTML export for Qt6 (Bug 493180).

2024-09-15  Robby Stephenson  <robby@periapsis.org>

	* Fixed compilation with Qt6/msvc.

2024-09-10  Robby Stephenson  <robby@periapsis.org>

	* Added menu item to change application language.

2024-09-04  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 4.0.

2024-08-06  Robby Stephenson  <robby@periapsis.org>

	* Updated BoardGameGeek data to replace HTML entities (Bug 491340).

2024-06-24  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.5.

2024-06-23  Robby Stephenson  <robby@periapsis.org>

	* Implemented overrides for SRU query indices (Bug 488931).

2024-06-21  Robby Stephenson  <robby@periapsis.org>

	* Removed percent encoding for XSLT file reading (Bug 488707).

2024-05-15  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with showing entries with long content (Bug 487079).

2024-03-23  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.4.

2024-03-17  Robby Stephenson  <robby@periapsis.org>

	* Updated Choice fields to allow multiple values (Bug 483831).

2024-03-16  Robby Stephenson  <robby@periapsis.org>

	* Updated FilmAffinity data source.

2024-03-15  Robby Stephenson  <robby@periapsis.org>

	* Added reader for importing book and video collections from file metadata (Bug 214606).

2024-03-09  Robby Stephenson  <robby@periapsis.org>

	* Enabled building with Qt6/KF6.
	* Fixed DVDFr searches with title accents.

2024-02-11  Robby Stephenson  <robby@periapsis.org>
