@@ -27,15 +27,19 @@
 
 #include "datavectors.h"
 
+#include <QObject>
+#include <QEventLoop>
+
 class QPrinter;
 class QWebEngineView;
 
 namespace Tellico {
 
-class PrintHandler {
+class PrintHandler : public QObject {
+Q_OBJECT
 
 public:
-  PrintHandler();
+  PrintHandler(QObject* parent=nullptr);
   ~PrintHandler();
 
   void setEntries(const Data::EntryList& entries);
@@ -44,16 +48,23 @@ public:
   void print();
   void printPreview();
 
+private Q_SLOTS:
+  void printDocument(QPrinter* printer);
+  void printFinished(bool success);
+  void pdfPrintFinished(const QString& fileName, bool success);
+
 private:
   QString generateHtml() const;
   bool printPrepare();
 
-  std::unique_ptr<QPrinter> m_printer;
-  std::unique_ptr<QWebEngineView> m_view;
-  bool m_inPrintPreview;
   Data::EntryList m_entries;
   QStringList m_columns;
   QString m_html;
+
+  std::unique_ptr<QPrinter> m_printer;
+  std::unique_ptr<QWebEngineView> m_view;
+  QEventLoop m_waitForResult;
+  bool m_inPrintPreview;
 };
 
 }
